# template-latex

./: .bandit  .gitignore  AUTHORS  Dockerfile  LICENSE  Makefile  Makefile.am  README.md  bootstrap.sh  configure.ac  hints.txt  tox.ini
.github/ISSUE_TEMPLATE/: feedback.yaml  template-issue.yaml
.github/workflows/: bandit.yml  latex.yaml
beamer-example/: Makefile.am  preamble.tex
beamer-example-work/: Makefile.am  beamer-example.tex
container/: Dockerfile  Dockerfile.paper
docker/: Dockerfile  Dockerfile.paper
docs/: README.md  openbsd.md
drawings/: draft_arch.drawio  ml-project.drawio
frontmatter/: title.tex
images/: README.md  panorama1.xcf
images/drawio-libs/: README.md
images/icons/palo/: panorama2.xcf
images/icons/redhat/02 Software/: Icon_RH_Software_Container-Deployed-Cloud_RGB_White.png~
paper/: Dockerfile  Makefile.am  mybib.bib  paper.tex  preamble.tex
paper/frontmatter/: title.tex
src/: requirements.txt
tests/: README.md  requirements-test.txt
workflows/: latex.yaml
